--- a/imgui.ini
+++ b/imgui.ini
@@ -215,3 +215,11 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x3EB59D1E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF1BD9E54,4]
+RefScale=13
+Column 0  Sort=0v
+
