--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "libs/ImGuiFileDialog"]
 	path = libs/ImGuiFileDialog
 	url = https://github.com/aiekick/ImGuiFileDialog
+	branch = Lib_Only
+[submodule "libs/SFGL"]
+	path = libs/SFGL
+	url = https://github.com/LiamAbyss/SFGL
