Fix minor bugs, add pixel perfect support and convert hitbox to convex polygons

--- a/imgui.ini
+++ b/imgui.ini
@@ -223,3 +223,135 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x49859E78,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6FA07B20,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA0A8786A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7BAE0BC2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5D8BEE9A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x31DCAACF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD7987B0C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA6CA00AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCB68789C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xED4D9DC4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x69670CCE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4F42E996,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x37DD1766,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x11F8F23E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3AD7B137,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1CF2546F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3CEBE7D7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA35F2E03,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC9930D7C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCAC1543C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC1F7A48D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCA59B05C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC90BE91C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD2F44A4F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1B06D5A2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x274A6AA3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA16291A4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x23D36784,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xECDB64CE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA99EDC35,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x81823DF1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x68AFDBE3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4E8A3EBB,4]
+RefScale=13
+Column 0  Sort=0v
+
