Add functions to improve readability

--- a/HitboxDrawer.vcxproj
+++ b/HitboxDrawer.vcxproj
@@ -151,23 +151,23 @@
     <ClCompile Include="libs\IMGUI\imgui_stdlib.cpp" />
     <ClCompile Include="libs\IMGUI\imgui_tables.cpp" />
     <ClCompile Include="libs\IMGUI\imgui_widgets.cpp" />
-    <ClCompile Include="libs\SFGL\SFGL\Camera.cpp" />
-    <ClCompile Include="libs\SFGL\SFGL\Game.cpp" />
-    <ClCompile Include="libs\SFGL\SFGL\ResourceManager.cpp" />
-    <ClCompile Include="libs\SFGL\SFGL\Scene.cpp" />
-    <ClCompile Include="libs\SFGL\SFGL\TransparentWindow.cpp" />
+    <ClCompile Include="libs\SFGL\Camera.cpp" />
+    <ClCompile Include="libs\SFGL\Game.cpp" />
+    <ClCompile Include="libs\SFGL\ResourceManager.cpp" />
+    <ClCompile Include="libs\SFGL\Scene.cpp" />
+    <ClCompile Include="libs\SFGL\TransparentWindow.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConcavePolygon.h" />
     <ClInclude Include="libs\ImGuiFileDialog\ImGuiFileDialog.h" />
     <ClInclude Include="libs\IMGUI\imgui_stdlib.h" />
-    <ClInclude Include="libs\SFGL\SFGL\Camera.h" />
-    <ClInclude Include="libs\SFGL\SFGL\Game.h" />
-    <ClInclude Include="libs\SFGL\SFGL\JsonHeader\json.hpp" />
-    <ClInclude Include="libs\SFGL\SFGL\ResourceManager.h" />
-    <ClInclude Include="libs\SFGL\SFGL\Scene.h" />
-    <ClInclude Include="libs\SFGL\SFGL\TransparentWindow.h" />
+    <ClInclude Include="libs\SFGL\Camera.h" />
+    <ClInclude Include="libs\SFGL\Game.h" />
+    <ClInclude Include="libs\SFGL\JsonHeader\json.hpp" />
+    <ClInclude Include="libs\SFGL\ResourceManager.h" />
+    <ClInclude Include="libs\SFGL\Scene.h" />
+    <ClInclude Include="libs\SFGL\TransparentWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
